General code update

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,30 @@
 <html>
 <head>
-  <title></title>
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+	<script type="text/javascript" src="axios.js"></script>
 </head>
 <body>
+	<div id="cardContainer">
+		<!-- 24h Average Download / Upload -->
+		<div class="card">
+			<div class="cardName">24 Hour Average (Mbps)</div>
+			<div class="card_text">
+				<div class="24_upload">23</div>
+				<div class="24_slash">/</div>
+				<div class="24_download">45</div>
+			</div>
+		</div>
+		<!-- 7D Average Download / Upload -->
+		<div class="card"></div>
+		<!-- Something -->
+		<div class="card"></div>
+	</div>
+	<!-- 7 Day Download / Upload Graph -->
+	<div id="chartContainer">
+
+	</div>
+	<!-- JS -->
+	<script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
