Cleaned up files

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-	<script type="text/javascript" src="axios.js"></script>
-	<script type="text/javascript" src="moment.js"></script>
-	<script type="text/javascript" src="chart.js"></script>
+	<script type="text/javascript" src="lib/axios.js"></script>
+	<script type="text/javascript" src="lib/moment.js"></script>
+	<script type="text/javascript" src="lib/chart.js"></script>
 </head>
 <body>
 	<div id="cardContainer">
