--- a/public/index.html
+++ b/public/index.html
@@ -12,27 +12,27 @@
 		<div class="card">
 			<div class="cardName">24 Hour Average (Mbps)</div>
 			<div class="card_text">
-				<div class="download_24h">88</div>
+				<div class="dl24">88</div>
 				<div>/</div>
-				<div class="upload_24h">88</div>
+				<div class="ul24">88</div>
 			</div>
 		</div>
 		<!-- 7D Average Download / Upload -->
 		<div class="card">
 			<div class="cardName">7 Day Average (Mbps)</div>
 			<div class="card_text">
-				<div class="download_7d">88</div>
+				<div class="dl7">88</div>
 				<div>/</div>
-				<div class="upload_7d">88</div>
+				<div class="ul7">88</div>
 			</div>
 		</div>
 		<!-- Something -->
 		<div class="card">
 			<div class="cardName">Full Average (Mbps)</div>
 			<div class="card_text">
-				<div class="download_full">88</div>
+				<div class="dlF">88</div>
 				<div>/</div>
-				<div class="upload_full">88</div>
+				<div class="ulF">88</div>
 			</div>
 		</div>
 	</div>
