Fix for responsive screens

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-	<title></title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title></title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 	<script type="text/javascript" src="lib/axios.js"></script>
 	<script type="text/javascript" src="lib/moment.js"></script>
