Changed max history to 45 days default

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 	</div>
 	<!-- Something -->
 	<div class="card">
-		<div class="cardName">Full Average (Mbps)</div>
+		<div class="cardName">45 Day Average (Mbps)</div>
 		<div class="card_text">
 			<div class="dlF">88</div>
 			<div>/</div>
